# whatever

./: .gitignore  CMakeLists.txt  README.md  TheGame.sln  cmake_build.sh
SomeGame/: alive.cpp  alive.hpp  main.cpp  player.c  player.cpp  player.h  player.hpp  stats.h  stats.hpp  teste.cpp  teste.hpp  utils.cpp
TheGame/: alive.cpp  alive.h  job.cpp  job.h  job_names.txt  main.cpp  player.cpp  player.h  stats.h  teste.cpp  utils.cpp  utils.h
TheGame/TheGame/: alive.h  job.cpp  job.h  stats.h  utils.cpp  utils.h
src/: Jobs.txt  alive.cpp  alive.h  job.cpp  job.h  main.cpp  player.cpp  player.h  stats.h  test.cpp  utils.cpp  utils.h
